--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
     <body>
         <h1>E.T.'s Portfolio</h1>
+        <h2>PacMen Factory Project</h2>
+        <a href="https://malachitescode.github.io/PacMen/">Go to Project</a>
     </body>
 </html>
