--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>My Projects</h1>
+    <head>
+        <title>Portfolio || Projects</title>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <!-- CSS + JS -->
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
+    </head>
+    <body class="project">
+        <div class="header">
+            <h1>My Projects</h1>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">PacMen Factory Project</h5>
+              <p class="card-text">The PacMen Factory Project adds PacMen to the window and allows them to move at random.</p>
+              <a href="https://malachitescode.github.io/PacMen/" class="btn btn-primary">View Project</a>
+            </div>
+        </div>
+        <div class="card2" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Eye Movement Project</h5>
+              <p class="card-text">The Eye Movement Project uses an illustration of eyes to follow the user's cursor.</p>
+              <a href="#" class="btn btn-primary">View Project</a>
+            </div>
+        </div>
+        <div class="card3" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Moving Tracker Project</h5>
+              <p class="card-text">The Moving Tracker Project places a mark on a map that moves between bus stops in between MIT and Harvard.</p>
+              <a href="https://malachitescode.github.io/MovingMarkers/" class="btn btn-primary">View Project</a>
+            </div>
+        </div>
+        <div class="footer"><h4>GitHub</h4>
+            <a href="https://github.com/malachitesCode?tab=repositories">GitHub Page</a>
+        </div>
     </body>
 </html>
