--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>E.T.'s Portfolio</h1>
-        <h2>PacMen Factory Project</h2>
-        <a href="https://malachitescode.github.io/PacMen/">Go to Project</a>
+    <head>
+        <title>Portfolio || Homepage</title>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <!-- CSS + JS -->
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
+    </head>
+    <body class="main">
+        <div class="header">
+            <h1>E.T.'s Portfolio</h1>
+        </div>
+        <div class="bio">
+            <p>I'm E.T. and this is my iDTech portfolio! Here you'll find the three projects I made for iD Tech's JavaScript Coding powered by MIT Open Learning Class by clicking on the link to the right. Happy viewing!</p>
+        </div>
+        <div class="pic">
+
+        </div>
+        <div class="toProjects">
+            Click here to view my projects!
+        </div>
+        <div class="footer"><h4>GitHub</h4>
+            <a href="https://github.com/malachitesCode?tab=repositories">GitHub Page</a>
+        </div>
     </body>
 </html>
