--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
             <h1>E.T.'s Portfolio</h1>
         </div>
         <div class="bio">
-            <p>I'm E.T. and this is my iDTech portfolio! Here you'll find the three projects I made for iD Tech's JavaScript Coding powered by MIT Open Learning Class by clicking on the link to the right. Happy viewing!</p>
+            <p>I'm E.T. and this is my iDTech portfolio! Here you'll find the three projects I made for iD Tech's JavaScript Coding powered by MIT Open Learning Class by clicking on the link to the right. I specialize in digital illustration with additional basic knowledge of graphic design, animation, and pixel art. However, I also have experience working with HTML, CSS, and JavaScript for web design and GDcode for the video game engine software Godot Engine. Thanks for visiting!</p>
         </div>
-        <div class="pic">
-
-        </div>
+            <img src="pic.png" class="pic" alt="...">
         <div class="toProjects">
             Click here to view my projects!
         </div>
-        <div class="footer"><h4>GitHub</h4>
-            <a href="https://github.com/malachitesCode?tab=repositories">GitHub Page</a>
+        <div class="footer"><h4>v GitHub v</h4>
+            <a href="https://github.com/malachitesCode?tab=repositories">malachitesCode</a>
+            <hr><a href="#"><h5>Return to Home</h5></a>
         </div>
     </body>
 </html>
