--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </div>
             <img src="pic.png" class="pic" alt="...">
         <div class="toProjects">
-            Click here to view my projects!
+            <a href="projects.html">Click here to view my projects!</a>
         </div>
         <div class="footer"><h4>v GitHub v</h4>
             <a href="https://github.com/malachitesCode?tab=repositories">malachitesCode</a>
-            <hr><a href="#"><h5>Return to Home</h5></a>
+            <hr><a href="index.html"><h5>Return to Home</h5></a>
         </div>
     </body>
 </html>
