--- a/projects.html
+++ b/projects.html
@@ -28,13 +28,14 @@
         </div>
         <div class="card3" style="width: 18rem;">
             <div class="card-body">
-              <h5 class="card-title">Moving Tracker Project</h5>
-              <p class="card-text">The Moving Tracker Project places a mark on a map that moves between bus stops in between MIT and Harvard.</p>
+              <h5 class="card-title">Moving Marker Project</h5>
+              <p class="card-text">The Moving Marker Project places a mark on a map that moves between bus stops between MIT and Harvard.</p>
               <a href="https://malachitescode.github.io/MovingMarkers/" class="btn btn-primary">View Project</a>
             </div>
         </div>
-        <div class="footer"><h4>GitHub</h4>
-            <a href="https://github.com/malachitesCode?tab=repositories">GitHub Page</a>
+        <div class="footer"><h4>v GitHub v</h4>
+            <a href="https://github.com/malachitesCode?tab=repositories">malachitesCode</a>
+            <hr><a href="index.html"><h5>Return to Home</h5></a>
         </div>
     </body>
 </html>
