--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div class="bio">
             <p>I'm E.T. and this is my iDTech portfolio! Here you'll find the three projects I made for iD Tech's JavaScript Coding powered by MIT Open Learning Class by clicking on the link to the right. I specialize in digital illustration with additional basic knowledge of graphic design, animation, and pixel art. However, I also have experience working with HTML, CSS, and JavaScript for web design and GDcode for the video game engine software Godot Engine. Thanks for visiting!</p>
         </div>
-            <img src="pic.png" class="pic" alt="...">
+            <a href="bonus.html">
+                <img src="pic.png" class="pic" alt="...">
+            </a>
         <div class="toProjects">
             <a href="projects.html">Click here to view my projects!</a>
         </div>
@@ -25,4 +27,3 @@
         </div>
     </body>
 </html>
-
