--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
             <div class="card-body">
               <h5 class="card-title">Eye Movement Project</h5>
               <p class="card-text">The Eye Movement Project uses an illustration of eyes to follow the user's cursor.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="https://malachitescode.github.io/EyeMovement/" class="btn btn-primary">View Project</a>
             </div>
         </div>
         <div class="card3" style="width: 18rem;">
@@ -39,4 +39,3 @@
         </div>
     </body>
 </html>
-
